--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -2,16 +2,17 @@
   <h1>Proyectos Realizados</h1>
   <div class="contenedor">
     <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-      <h2>Colectivos</h2>
+      <h2>Sistema LMS</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam,
-        dignissimos sint fugit quo possimus voluptates iusto, eligendi ipsa nam
-        beatae dolorem inventore nobis veniam ducimus a officia eum asperiores
-        maxime?
+        Integración de sistema académico con un aula virtual utilizando apache kafka e implementando patrón pipeline.
       </p>
     </div>
-    <div class="col-sm-12 col-md-3 col-lg-3 offset-md-1 offset-lg-1 parte2">
-      <img src="../../../assets/github.png" class="img-fluid img-proyecto" />
+    <div class="col-sm-12 col-md-7 col-lg-7 parte1">
+      <h2>Sistema de reserva de pasajes</h2>
+      <p>
+        Trabajo realizado en la facultad que consistía en un sistema de reservas en la cual el usuario podía elegir el asiento. También administración de pagos.
+      </p>
     </div>
+  
   </div>
 </div>
