--- a/src/app/components/hys/hys.component.html
+++ b/src/app/components/hys/hys.component.html
@@ -1,125 +1,39 @@
 <div class="row">
-  <!--ng-circle-progress
-        showUnits desaparece porcentaje
-    -->
-  <h1>Hard % Soft skills</h1>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-      [percent]="85"
-      [radius]="100"
-      [imageSrc]="'../assets/instagram.png'"
-      [imageHeight]="50"
-      [imageWidth]="50"
-      [showImage]="true"
-      [showSubtitle]="false"
-      [showUnits]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="300"
-    >
-    </circle-progress>
+
+  <h1>Hard & Soft skills</h1>
+  <div class="col-lg-2">
+      <button type="button" routerLink="/newskill" class="btn btn-dark" *ngIf="isLogged">Nueva Skill</button>
   </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-      [percent]="85"
-      [radius]="100"
-      [imageSrc]="'../assets/instagram.png'"
-      [imageHeight]="50"
-      [imageWidth]="50"
-      [showImage]="true"
-      [showSubtitle]="false"
+
+
+  <div class="text-center col-sm-4 col-md-4 col-lg-4 circulo" *ngFor="let skill of skill">
+      <circle-progress 
+      [percent]="(skill.porcentaje)" 
+      [radius]="90"
+      [title]="(skill.nombre)"
+      [titleColor]="'#212F3C'"
+      [showTitle]="true" 
+      [showImage]="false"  
       [showUnits]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="300"
-    >
-    </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-      [percent]="85"
-      [radius]="100"
-      [imageSrc]="'../assets/instagram.png'"
-      [imageHeight]="50"
-      [imageWidth]="50"
-      [showImage]="true"
-      [showSubtitle]="false"
-      [showUnits]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="300"
-    >
-    </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-      [percent]="85"
-      [radius]="100"
-      [imageSrc]="'../assets/instagram.png'"
-      [imageHeight]="50"
-      [imageWidth]="50"
-      [showImage]="true"
-      [showSubtitle]="false"
-      [showUnits]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="300"
-    >
-    </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-      [percent]="85"
-      [radius]="100"
-      [imageSrc]="'../assets/instagram.png'"
-      [imageHeight]="50"
-      [imageWidth]="50"
-      [showImage]="true"
-      [showSubtitle]="false"
-      [showUnits]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="300"
-    >
-    </circle-progress>
-  </div>
-  <div class="text-center col-sm-4 col-md-4 col-lg-4">
-    <circle-progress
-      [percent]="85"
-      [radius]="100"
-      [imageSrc]="'../assets/instagram.png'"
-      [imageHeight]="50"
-      [imageWidth]="50"
-      [showImage]="true"
-      [showSubtitle]="false"
-      [showUnits]="false"
-      [outerStrokeWidth]="16"
-      [innerStrokeWidth]="8"
-      [outerStrokeColor]="'#78C000'"
-      [innerStrokeColor]="'#C7E596'"
-      [animation]="true"
-      [animationDuration]="300"
-    >
-    </circle-progress>
+      [showSubtitle]="false" 
+      [outerStrokeWidth]="12" 
+      [innerStrokeWidth]="5" 
+      [outerStrokeColor]="'#9214D8'"
+      [innerStrokeColor]="'#6114D8'" 
+      [animation]="true" 
+      [animationDuration]="600">
+      </circle-progress>
+
+      <div>
+          <td *ngIf="isLogged">
+              <button class="btn btn-light" routerLink="/editskill/{{skill.id}}">
+                  <i class="bi bi-pencil-fill"></i></button>
+          </td>
+          <td *ngIf="isLogged">
+              <button class="btn btn-danger" (click)="delete(skill.id)">
+                  <i class="bi bi-trash-fill"></i></button>
+          </td>
+      </div>
+      
   </div>
 </div>
-<!--
-[title]="'HTML'"
-[titleFontSize]="'3em'"
-[showSubtitle]="false"
--->
