--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -4,9 +4,7 @@
             <img src="../../../assets/APLogo.png" id="logo">
         </div>
         <div class="redes">
-                <a href=""><img src="../../../assets/github.png" id="github"></a>
-                <a href=""><img src="../../../assets/instagram.png" id="instagram"></a>
-                <a href=""><img src="../../../assets/linkedin.png" id="linkedin"></a>
+                <a href="https://github.com/DeboAv"><img src="../../../assets/github.png" id="github"></a>
                 <button type="button" class="btn btn-outline-light" (click)="login()" *ngIf="!isLogged">INGRESAR</button>
                 <button type="button" class="btn btn-outline-light" (click)="onLogOut()" *ngIf="isLogged">SALIR</button>
         </div>
