--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+button {
+    box-shadow: 5px 5px 5px gray !important;
+}
+
+button:hover {
+    border: 1px solid rgb(0, 0, 0) !important;
+}
